--- a/contact-us.html
+++ b/contact-us.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" src="style.css">
+    <script src="accordion.js" defer></script>
 </head>
 <body>
-    <!-- Your content goes here -->
+    <header>
+        <div class = "navbar">
+            <ul>
+                  <li><a href="index.html" class = "links" ><i class="fa-solid fa-house"></i>Home</a></li>
+                   <li><a href="about-us.html" class = "links"  >About us</a></li>
+                   <li><a href="contact-us.html" class = "links" >Contact us</a></li>
+                   <li><a href="help.html" class = "links" >Help</a></li>
+             </ul> 
+        </div>  
+    </header>
+
+
+
+    <div class = "main">
+
+    </div>
+
+
+
+    <footer>
+        <div class = "footer">
+            <p>
+            Made with &hearts; by <a href="https://github.com/0xshariq" class = "links">0xshariq</a>
+            </p>
+            <br />
+            <p>
+                Copyright &copy; 2021
+            </p>  
+        </div>
+    </footer>
 </body>
 </html>
