--- a/help.html
+++ b/help.html
@@ -30,13 +30,17 @@
 
     <footer>
         <div class = "footer">
-            <p>
-           Made with &hearts; by <a href="https://github.com/0xshariq" class = "links">0xshariq</a>
-        </p>
-        <br />
-        <p>
-           Copyright &copy; 2021
-        </p>  
+            <div class = "p1">
+               <p>
+            Made with &hearts; by <a href="https://github.com/0xshariq" class = "links">0xshariq</a>
+               </p>
+            </div>
+
+            <div class = "p2">
+               <p>
+                Copyright &copy; 2021
+               </p>
+            </div>
         </div>
     </footer>
 </body>
