--- a/contact-us.html
+++ b/contact-us.html
@@ -23,20 +23,41 @@
 
 
     <div class = "main">
-
+        <div class="accordion">
+            <div class="accordion-item">
+              <div class="accordion-title">Company E-mail Account</div>
+              <div class="accordion-content">xyz@gmail.com</div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-title">Mobile Number</div>
+              <div class="accordion-content">+91 73829 87282</div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-title">Toll-free Landline Number</div>
+              <div class="accordion-content">022-7368 2873</div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-title">Address</div>
+              <div class="accordion-content">Sector-9,Vashi,Navi Mumbai-400 009</div>
+            </div>
+        </div>
     </div>
 
 
 
     <footer>
         <div class = "footer">
-            <p>
+            <div class = "p1">
+               <p>
             Made with &hearts; by <a href="https://github.com/0xshariq" class = "links">0xshariq</a>
-            </p>
-            <br />
-            <p>
+               </p>
+            </div>
+
+            <div class = "p2">
+               <p>
                 Copyright &copy; 2021
-            </p>  
+               </p>
+            </div>
         </div>
     </footer>
 </body>
