--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <div class = "navbar">
+            <h1>
+                BookStore   
+            </h1>       
             <ul>
               <li><a href="index.html" class = "links" ><i class="fa-solid fa-house"></i>Home</a></li>
                <li><a href="about-us.html" class = "links"  >About us</a></li>
@@ -24,15 +27,15 @@
     
     <div class = "main">
        <div class="accordion">
-    <div class="accordion-item">
-      <div class="accordion-title">Accordion Title 1</div>
-      <div class="accordion-content">Accordion Content 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+        <div class="accordion-item">
+        <div class="accordion-title">Accordion Title 1</div>
+        <div class="accordion-content">Accordion Content 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
         placeat maiores porro architecto repellendus? Numquam modi, voluptatibus laboriosam cupiditate earum nobis
         accusamus quam temporibus deleniti vitae ipsam rem ratione assumenda.</div>
-    </div>
-    <div class="accordion-item">
-      <div class="accordion-title">Accordion Title 2</div>
-      <div class="accordion-content">Accordion Content 2 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        </div>
+        <div class="accordion-item">
+        <div class="accordion-title">Accordion Title 2</div>
+        <div class="accordion-content">Accordion Content 2 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
         Laudantium officiis nam earum enim laboriosam saepe placeat eum consequatur cum? Laboriosam assumenda
         voluptatibus, cum repellat illum vitae optio temporibus nemo quia!</div>
     </div>
