--- a/contact-us.html
+++ b/contact-us.html
@@ -10,13 +10,18 @@
 </head>
 <body>
     <header>
-        <div class = "navbar">
-            <ul>
-                  <li><a href="index.html" class = "links" ><i class="fa-solid fa-house"></i>Home</a></li>
-                   <li><a href="about-us.html" class = "links"  >About us</a></li>
-                   <li><a href="contact-us.html" class = "links" >Contact us</a></li>
-                   <li><a href="help.html" class = "links" >Help</a></li>
-             </ul> 
+        <div class = "navbar">  
+            <div class = "menu-bar">
+               <ul>
+              <li class = "menu-btn">
+                  <i class="fa-solid fa-bars"></i>Menu
+              </li>
+              <li class = "menu-items"><a href="index.html" class = "links" ><i class="fa-solid fa-house"></i>Home</a></li>
+              <li class = "menu-items"><a href="about-us.html" class = "links"  ><i class="fa-solid fa-user"></i>About us</a></li>
+              <li class = "menu-items"><a href="contact-us.html" class = "links" ><i class="fa-solid fa-phone"></i>Contact us</a></li>
+              <li class = "menu-items"><a href="help.html" class = "links" ><i class="fa-solid fa-question"></i>Help</a></li>
+            </ul> 
+            </div>
         </div>  
     </header>
 
